<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <cl.ilarrain.xposed.tabletmode.FilterItemComponent
        android:id="@+id/fltAppType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:label="@string/filter_type"
        app:overridden_label="@string/filter_user"
        app:unchanged_label="@string/filter_system" />

    <cl.ilarrain.xposed.tabletmode.FilterItemComponent
        android:id="@+id/fltActive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:label="@string/filter_settingsactive"
        app:overridden_label="@string/filter_active"
        app:unchanged_label="@string/filter_notactive" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <cl.ilarrain.xposed.tabletmode.FilterItemComponent
                android:id="@+id/fltPhysDPI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:label="@string/settings_physdpi" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:attr/buttonBarStyle"
        android:gravity="right"
        android:orientation="horizontal"
        android:paddingTop="10dp">

        <Button
            android:id="@+id/btnFilterCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/filter_cancel" />

        <Button
            android:id="@+id/btnFilterClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/filter_clear" />

        <Button
            android:id="@+id/btnFilterApply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/filter_apply" />
    </LinearLayout>
</LinearLayout>
